syntax = "proto3";

package example;

import "buf/validate/validate.proto"

option go_package = "github.com/zholdaskali/go_grpc/pkg/example";

// CreatePostRequest - запрос CreatePost
message CreatePostRequest {
    // title - название поста
    string title = 1 [json_name = "title", (buf.validate.field).string = {min_len: 3, max_len: 256}];
    // author_id - айди автора поста
    string author_id = 2 [json_name = "author_id", (buf.validate.field).string.min_len = 1];
    // content - содержание поста
    string content = 3 [json_name = "content", (buf.validate.field) = {min_len: 1, max_len: 2048}];
}

// CreatePostResponse - ответ CreatePost
message CreatePostResponse {
    // post_id - айди поста
    uint64 post_id = 1 [json_name = "post_id"];
}

message ListPostsRequest {}

message ListPostsResponse {
    repeated Post posts = 1;
}

message Post {
    uint64 post_id = 1;
    string title = 2;
    string author_id = 3;
    string content = 4;
}